--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="oben">
-    <button onclick="location.href='https://dachsjaeger.github.io'" type="Back" id="">&larr; Zur&uuml;ck</button>
+    <button onclick="location.href='https://dachsjaeger.github.io/'" type="Back" id="">&larr; Zur&uuml;ck</button>
   </div>
 
   <section>
