--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="contact" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Gulasch. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="https://www.pexels.com">Pexels</a>.</p>
+						<p class="copyright">&copy; Gulasch. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="https://www.pexels.com">Pexels</a>.</p>
 					</div>
 				</footer>
 
