--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="contact" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="contact" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -108,7 +108,7 @@
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="contact" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Gulasch. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="https://www.pexels.com">Pexels</a>.</p>
+						<p class="copyright">&copy; Gulasch.
 					</div>
 				</footer>
 
