--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<ul class="icons">
 							<li><a href="https://twitter.com/Dachsjger1" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="contact" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<p class="copyright">&copy; Gulasch.
 					</div>
