--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; &nbsp; &nbsp; v 0.5.3
+						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 0.5.3
 					</div>
 				</footer>
 
