--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Full Motion by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>Henri Gulasch</title>
-		<link rel="icon" href="images/hg.png">
+		<link rel="icon" href="images/gulasch.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -108,7 +103,7 @@
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 0.5.3
+						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 0.5.4
 					</div>
 				</footer>
 
