--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<div class="box">
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
+									<h3>Henri Gulasch</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
 									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
@@ -90,7 +90,7 @@
 				<footer id="footer">
 					<div class="inner">
 						<h2>Henri Gulasch</h2>
-						<p>Im Alter von gerade einmal 16 Jahren wurde Henri durch Gl&uuml;cksspiel zum Multi-Million&auml;r. Vorher schon war er auff&auml;llig intelligent und bewandert in vielen Dinge. Dazu z&auml;hlte beispielsweise Esport, Aktien und Technik. Heute ist Henri CEO der Gulasch Corp. und mit einem gesch&auml;tzten Verm&ouml;gen von 69 Milliarden der reichste Mensch der Welt.</p>
+						<p>Im Alter von gerade einmal 16 Jahren wurde Henri Gulasch durch Gl&uuml;cksspiel zum Multi-Million&auml;r. Vorher schon war er auff&auml;llig intelligent und bewandert in vielen Dinge. Dazu z&auml;hlte beispielsweise Esport, Aktien und Technik. Heute ist Henri CEO der Gulasch Corp. und mit einem gesch&auml;tzten Verm&ouml;gen von 69 Milliarden der reichste Mensch der Welt.</p>
 
 						<ul class="icons">
 							<li><a href="https://twitter.com/Dachsjger1" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
