--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://discord.com/oauth2/authorize?client_id=806060214154952704&permissions=8&scope=bot" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Janus Bot</h3>
+									<p>Ein Discord-Bot für alles! Suchen Sie einen Discord Bot der Musik spielen kann,&nbsp; Ja-Nein Fragen beantwortet und Didi beleidigt? Das und noch viel mehr bietet JANUS. </p>
+									<a href="https://discord.com/oauth2/authorize?client_id=806060214154952704&permissions=8&scope=bot" target="_blank" rel="noopener noreferrer" class="button fit" >Invite</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="gulasch/index.html" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Gulasch Corp.</h3>
+									<p>Das Unternehem des berühmten Henri Gulasch. Äußerst lukrative Investment und mehre Milliarden Dollar Umsatz machen es zur besten Geldanlage-Institution der Welt.</p>
+									<a href="gulasch/index.html" target="_blank" rel="noopener noreferrer" class="button style2 fit" data-poptrox="youtube,800x40">View</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="galerie/index.html" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Henri Gulasch</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Die Wahrheit</h3>
+									<p>Eine sehr dramatische Bilderserie von Henri Gulasch. Beeindruckende Bildkompositionen und brutale Farben hinterlassen einen bleibenden Eindruck.</p>
+									<a href="galerie/index.html" target="_blank" rel="noopener noreferrer" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -97,7 +97,7 @@
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 0.5.4
+						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 0.7.0
 					</div>
 				</footer>
 
