--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="henri/index.html" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Portfolio</h3>
+									<p>Die Geschichte des Henri Gulasch und der Aufbau seines Imperiums. Dramatisch, beeindruckend, überwältigent.</p>
+									<a href="henri/index.html" target="_blank" rel="noopener noreferrer" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a  class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>In Arbeit</h3>
+									<p></p>
+									
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a  class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>In Arbeit</h3>
+									<p></p>
+									
 								</div>
 							</div>
 
@@ -95,7 +95,7 @@
 						<ul class="icons">
 							<li><a href="https://twitter.com/Dachsjger1" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="contact/index.html" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 0.7.2
 					</div>
