--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="oben">
-    <button onclick="location.href='file:///C:/Users/Adler/Desktop/Site/index.html'" type="Back" id="">&larr; Zur&uuml;ck</button>
+    <button onclick="https://henri-gulasch.xyz/" type="Back" id="">&larr; Zur&uuml;ck</button>
   </div>
 
   <section>
