--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<div class="inner">
 									<h3>Janus Bot</h3>
 									<p>Ein Discord-Bot für alles! Suchen Sie einen Discord Bot der Musik spielen kann,&nbsp; Ja-Nein Fragen beantwortet und Didi beleidigt? Das und noch viel mehr bietet JANUS. </p>
-									<a href="https://discord.com/oauth2/authorize?client_id=806060214154952704&permissions=8&scope=bot" target="_blank" rel="noopener noreferrer" class="button fit" >Invite</a>
+									<a href="https://discord.com/oauth2/authorize?client_id=806060214154952704&permissions=8&scope=bot" target="_blank" rel="noopener noreferrer" class="button fit" >Einladen</a>
 								</div>
 							</div>
 
@@ -41,7 +41,7 @@
 								<div class="inner">
 									<h3>Gulasch Corp.</h3>
 									<p>Das Unternehem des berühmten Henri Gulasch. Äußerst lukrative Investment und mehre Milliarden Dollar Umsatz machen es zur besten Geldanlage-Institution der Welt.</p>
-									<a href="gulasch/index.html" target="_blank" rel="noopener noreferrer" class="button style2 fit" data-poptrox="youtube,800x40">View</a>
+									<a href="gulasch/index.html" target="_blank" rel="noopener noreferrer" class="button style2 fit" data-poptrox="youtube,800x40">Anschauen</a>
 								</div>
 							</div>
 
@@ -50,7 +50,7 @@
 								<div class="inner">
 									<h3>Die Wahrheit</h3>
 									<p>Eine sehr dramatische Bilderserie von Henri Gulasch. Beeindruckende Bildkompositionen und brutale Farben hinterlassen einen bleibenden Eindruck.</p>
-									<a href="galerie/index.html" target="_blank" rel="noopener noreferrer" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="galerie/index.html" target="_blank" rel="noopener noreferrer" class="button style3 fit" data-poptrox="youtube,800x400">Anschauen</a>
 								</div>
 							</div>
 
@@ -59,7 +59,7 @@
 								<div class="inner">
 									<h3>Portfolio</h3>
 									<p>Die Geschichte des Henri Gulasch und der Aufbau seines Imperiums. Dramatisch, beeindruckend, überwältigent.</p>
-									<a href="henri/index.html" target="_blank" rel="noopener noreferrer" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="henri/index.html" target="_blank" rel="noopener noreferrer" class="button style2 fit" data-poptrox="youtube,800x400">Anschauen</a>
 								</div>
 							</div>
 
