--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 				<footer id="footer">
 					<div class="inner">
 						<h2>Henri Gulasch</h2>
-						<p>Im Alter von gerade einmal 16 Jahren wurde Henri Gulasch durch Gl&uuml;cksspiel zum Multi-Million&auml;r. Vorher schon war er auff&auml;llig intelligent und bewandert in vielen Dinge. Dazu z&auml;hlte beispielsweise Esport, Aktien und Technik. Heute ist Henri CEO der Gulasch Corp. und mit einem gesch&auml;tzten Verm&ouml;gen von 69 Milliarden der reichste Mensch der Welt.</p>
+						<p>Im Alter von gerade einmal 16 Jahren wurde Henri Gulasch durch Gl&uuml;cksspiel zum Multi-Million&auml;r. Vorher schon war er auff&auml;llig intelligent und bewandert in vielen Dingen. Dazu z&auml;hlte beispielsweise Esport, Aktien und Technik. Heute ist Henri CEO der Gulasch Corp. und mit einem gesch&auml;tzten Verm&ouml;gen von 69 Milliarden der reichste Mensch der Welt.</p>
 
 						<ul class="icons">
 							<li><a href="https://twitter.com/Dachsjger1" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/henri_rrr/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="contact/index.html" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 1.0.2
+						<p class="copyright">&copy; Gulasch &nbsp; &nbsp; v 1.0.3
 					</div>
 				</footer>
 
