--- a/galerie/index.html
+++ b/galerie/index.html
@@ -16,7 +16,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Die Wahrheit</h1>
-							<p class="major">Die weltberühmte dreiteilige Bilderserie von <a href="https://html5up.net">Henri Gulasch</a>. Jede einzelne Darstellung beschreibt ihre ganz eigene, beeindruckend tiefgründige Geschichte.</p>
+							<p class="major">Die weltberühmte dreiteilige Bilderserie von <a href="https://henri-gulsch.xyz/">Henri Gulasch</a>. Jede einzelne Darstellung beschreibt ihre ganz eigene, beeindruckend tiefgründige Geschichte.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Beginnen</a></li>
 							</ul>
